z-index issues still need to deal with background onClick

--- a/src/Components/CustomColorPicker/customColorPicker.css
+++ b/src/Components/CustomColorPicker/customColorPicker.css
@@ -6,7 +6,7 @@
   position: absolute;
   opacity: 0;
   transition: all 400ms ease-in-out;
-  z-index: 5;
+  z-index: 3;
   padding: 0px 30px 30px 30px;
 }
 
@@ -29,14 +29,11 @@
   transform: scale(1.2);
 }
 
-.block {
-  position: absolute;
-}
-
 .selectedColor {
   text-align: left;
   font-size: 16px;
   font-family: 'HelveticaNeue-UltraLight';
+  z-index: 1;
   color: whitesmoke;
   -moz-user-select: all;
   -webkit-user-select: all;
